--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iot-dashboard-front",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://elmahfoud1994.github.io/webreathe",
+  "homepage": "https://elmahfoud1994.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
